# rusty-planets-impl

./: Cargo.toml  README.md  sol.json
src/: bodies.rs  main.rs  planet.rs  render.rs  ui.rs
