[package]
name = "rusty-planets"
version = "0.1.0"
authors = ["Billy Rhoades <me@brod.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.98.0"
nalgebra = "0.18"

rand = "0.7"
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
serde_json = "1.0.44"
serde = { version = "1.0", features = ["derive"] }
humantime = "1.3.0"

log = "0.4"
pretty_env_logger = "0.3"
criterion = "0.2"

rusttype = { version = "0.8", features = ["gpu_cache"] }

find_folder = "0.3.0"

[dependencies.piston2d-graphics]
version = "*"
features = ["glyph_cache_rusttype"]

[profile.release]
debug = true
lto = false

[[bench]]
name = "bench"
harness = false
